Hoc5/src/y.output
   0  $accept : list $end

   1  list :
   2       | list '\n'
   3       | list asgn '\n'
   4       | list expr '\n'
   5       | list stmt '\n'

   6  asgn : VAR '=' expr

   7  stmt : expr ';'
   8       | PRINT expr ';'
   9       | while cond stmt end
  10       | if cond stmt end
  11       | if cond stmt end else stmt end
  12       | '{' stmtlist '}'

  13  stmtlist :
  14           | stmtlist stmt

  15  cond : '(' expr ')'

  16  while : WHILE

  17  if : IF

  18  else : ELSE

  19  end :

  20  expr : poly
  21       | VAR
  22       | asgn
  23       | BLTIN '(' expr ',' expr ')'
  24       | BLTIN '(' expr ')'
  25       | expr '+' expr
  26       | expr '-' expr
  27       | expr '*' expr
  28       | expr '/' expr
  29       | expr '%' expr
  30       | expr '^' expr
  31       | expr EQ expr
  32       | expr NEQ expr
  33       | expr GT expr
  34       | expr LT expr
  35       | expr GE expr
  36       | expr LE expr
  37       | NUM
  38       | '(' expr ')'

  39  poly : '[' terms ']'
  40       | '[' ']'

  41  terms : term
  42        | term terms

  43  term : TERM

state 0
	$accept : . list $end  (0)
	list : .  (1)

	.  reduce 1

	list  goto 1


state 1
	$accept : list . $end  (0)
	list : list . '\n'  (2)
	list : list . asgn '\n'  (3)
	list : list . expr '\n'  (4)
	list : list . stmt '\n'  (5)

	$end  accept
	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	'('  shift 8
	'['  shift 9
	'\n'  shift 10
	'{'  shift 11
	.  error

	asgn  goto 12
	expr  goto 13
	stmt  goto 14
	while  goto 15
	if  goto 16
	poly  goto 17


state 2
	expr : BLTIN . '(' expr ',' expr ')'  (23)
	expr : BLTIN . '(' expr ')'  (24)

	'('  shift 18
	.  error


state 3
	asgn : VAR . '=' expr  (6)
	expr : VAR .  (21)

	'='  shift 19
	EQ  reduce 21
	NEQ  reduce 21
	GT  reduce 21
	LT  reduce 21
	GE  reduce 21
	LE  reduce 21
	','  reduce 21
	'-'  reduce 21
	'+'  reduce 21
	'/'  reduce 21
	'%'  reduce 21
	'*'  reduce 21
	'^'  reduce 21
	')'  reduce 21
	'\n'  reduce 21
	';'  reduce 21


state 4
	expr : NUM .  (37)

	.  reduce 37


state 5
	if : IF .  (17)

	.  reduce 17


state 6
	while : WHILE .  (16)

	.  reduce 16


state 7
	stmt : PRINT . expr ';'  (8)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 21
	poly  goto 17


state 8
	expr : '(' . expr ')'  (38)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 22
	poly  goto 17


state 9
	poly : '[' . terms ']'  (39)
	poly : '[' . ']'  (40)

	TERM  shift 23
	']'  shift 24
	.  error

	terms  goto 25
	term  goto 26


state 10
	list : list '\n' .  (2)

	.  reduce 2


state 11
	stmt : '{' . stmtlist '}'  (12)
	stmtlist : .  (13)

	.  reduce 13

	stmtlist  goto 27


12: shift/reduce conflict (shift 28, reduce 22) on '\n'
state 12
	list : list asgn . '\n'  (3)
	expr : asgn .  (22)

	'\n'  shift 28
	EQ  reduce 22
	NEQ  reduce 22
	GT  reduce 22
	LT  reduce 22
	GE  reduce 22
	LE  reduce 22
	'-'  reduce 22
	'+'  reduce 22
	'/'  reduce 22
	'%'  reduce 22
	'*'  reduce 22
	'^'  reduce 22
	';'  reduce 22


state 13
	list : list expr . '\n'  (4)
	stmt : expr . ';'  (7)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	'\n'  shift 41
	';'  shift 42
	.  error


state 14
	list : list stmt . '\n'  (5)

	'\n'  shift 43
	.  error


state 15
	stmt : while . cond stmt end  (9)

	'('  shift 44
	.  error

	cond  goto 45


state 16
	stmt : if . cond stmt end  (10)
	stmt : if . cond stmt end else stmt end  (11)

	'('  shift 44
	.  error

	cond  goto 46


state 17
	expr : poly .  (20)

	.  reduce 20


state 18
	expr : BLTIN '(' . expr ',' expr ')'  (23)
	expr : BLTIN '(' . expr ')'  (24)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 47
	poly  goto 17


state 19
	asgn : VAR '=' . expr  (6)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 48
	poly  goto 17


state 20
	expr : asgn .  (22)

	.  reduce 22


state 21
	stmt : PRINT expr . ';'  (8)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	';'  shift 49
	.  error


state 22
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)
	expr : '(' expr . ')'  (38)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	')'  shift 50
	.  error


state 23
	term : TERM .  (43)

	.  reduce 43


state 24
	poly : '[' ']' .  (40)

	.  reduce 40


state 25
	poly : '[' terms . ']'  (39)

	']'  shift 51
	.  error


state 26
	terms : term .  (41)
	terms : term . terms  (42)

	TERM  shift 23
	']'  reduce 41

	terms  goto 52
	term  goto 26


state 27
	stmt : '{' stmtlist . '}'  (12)
	stmtlist : stmtlist . stmt  (14)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	'('  shift 8
	'['  shift 9
	'{'  shift 11
	'}'  shift 53
	.  error

	asgn  goto 20
	expr  goto 54
	stmt  goto 55
	while  goto 15
	if  goto 16
	poly  goto 17


state 28
	list : list asgn '\n' .  (3)

	.  reduce 3


state 29
	expr : expr EQ . expr  (31)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 56
	poly  goto 17


state 30
	expr : expr NEQ . expr  (32)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 57
	poly  goto 17


state 31
	expr : expr GT . expr  (33)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 58
	poly  goto 17


state 32
	expr : expr LT . expr  (34)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 59
	poly  goto 17


state 33
	expr : expr GE . expr  (35)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 60
	poly  goto 17


state 34
	expr : expr LE . expr  (36)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 61
	poly  goto 17


state 35
	expr : expr '-' . expr  (26)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 62
	poly  goto 17


state 36
	expr : expr '+' . expr  (25)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 63
	poly  goto 17


state 37
	expr : expr '/' . expr  (28)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 64
	poly  goto 17


state 38
	expr : expr '%' . expr  (29)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 65
	poly  goto 17


state 39
	expr : expr '*' . expr  (27)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 66
	poly  goto 17


state 40
	expr : expr '^' . expr  (30)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 67
	poly  goto 17


state 41
	list : list expr '\n' .  (4)

	.  reduce 4


state 42
	stmt : expr ';' .  (7)

	.  reduce 7


state 43
	list : list stmt '\n' .  (5)

	.  reduce 5


state 44
	cond : '(' . expr ')'  (15)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 68
	poly  goto 17


state 45
	stmt : while cond . stmt end  (9)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	'('  shift 8
	'['  shift 9
	'{'  shift 11
	.  error

	asgn  goto 20
	expr  goto 54
	stmt  goto 69
	while  goto 15
	if  goto 16
	poly  goto 17


state 46
	stmt : if cond . stmt end  (10)
	stmt : if cond . stmt end else stmt end  (11)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	'('  shift 8
	'['  shift 9
	'{'  shift 11
	.  error

	asgn  goto 20
	expr  goto 54
	stmt  goto 70
	while  goto 15
	if  goto 16
	poly  goto 17


state 47
	expr : BLTIN '(' expr . ',' expr ')'  (23)
	expr : BLTIN '(' expr . ')'  (24)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	','  shift 71
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	')'  shift 72
	.  error


state 48
	asgn : VAR '=' expr .  (6)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	','  reduce 6
	')'  reduce 6
	'\n'  reduce 6
	';'  reduce 6


state 49
	stmt : PRINT expr ';' .  (8)

	.  reduce 8


state 50
	expr : '(' expr ')' .  (38)

	.  reduce 38


state 51
	poly : '[' terms ']' .  (39)

	.  reduce 39


state 52
	terms : term terms .  (42)

	.  reduce 42


state 53
	stmt : '{' stmtlist '}' .  (12)

	.  reduce 12


state 54
	stmt : expr . ';'  (7)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	';'  shift 42
	.  error


state 55
	stmtlist : stmtlist stmt .  (14)

	.  reduce 14


state 56
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr EQ expr .  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 31
	NEQ  reduce 31
	GT  reduce 31
	LT  reduce 31
	GE  reduce 31
	LE  reduce 31
	','  reduce 31
	')'  reduce 31
	'\n'  reduce 31
	';'  reduce 31


state 57
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr NEQ expr .  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 32
	NEQ  reduce 32
	GT  reduce 32
	LT  reduce 32
	GE  reduce 32
	LE  reduce 32
	','  reduce 32
	')'  reduce 32
	'\n'  reduce 32
	';'  reduce 32


state 58
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr GT expr .  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 33
	NEQ  reduce 33
	GT  reduce 33
	LT  reduce 33
	GE  reduce 33
	LE  reduce 33
	','  reduce 33
	')'  reduce 33
	'\n'  reduce 33
	';'  reduce 33


state 59
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr LT expr .  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 34
	NEQ  reduce 34
	GT  reduce 34
	LT  reduce 34
	GE  reduce 34
	LE  reduce 34
	','  reduce 34
	')'  reduce 34
	'\n'  reduce 34
	';'  reduce 34


state 60
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr GE expr .  (35)
	expr : expr . LE expr  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 35
	NEQ  reduce 35
	GT  reduce 35
	LT  reduce 35
	GE  reduce 35
	LE  reduce 35
	','  reduce 35
	')'  reduce 35
	'\n'  reduce 35
	';'  reduce 35


state 61
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)
	expr : expr LE expr .  (36)

	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 36
	NEQ  reduce 36
	GT  reduce 36
	LT  reduce 36
	GE  reduce 36
	LE  reduce 36
	','  reduce 36
	')'  reduce 36
	'\n'  reduce 36
	';'  reduce 36


state 62
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr '-' expr .  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 26
	NEQ  reduce 26
	GT  reduce 26
	LT  reduce 26
	GE  reduce 26
	LE  reduce 26
	','  reduce 26
	'-'  reduce 26
	'+'  reduce 26
	')'  reduce 26
	'\n'  reduce 26
	';'  reduce 26


state 63
	expr : expr . '+' expr  (25)
	expr : expr '+' expr .  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	EQ  reduce 25
	NEQ  reduce 25
	GT  reduce 25
	LT  reduce 25
	GE  reduce 25
	LE  reduce 25
	','  reduce 25
	'-'  reduce 25
	'+'  reduce 25
	')'  reduce 25
	'\n'  reduce 25
	';'  reduce 25


state 64
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr '/' expr .  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'^'  shift 40
	EQ  reduce 28
	NEQ  reduce 28
	GT  reduce 28
	LT  reduce 28
	GE  reduce 28
	LE  reduce 28
	','  reduce 28
	'-'  reduce 28
	'+'  reduce 28
	'/'  reduce 28
	'%'  reduce 28
	'*'  reduce 28
	')'  reduce 28
	'\n'  reduce 28
	';'  reduce 28


state 65
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr '%' expr .  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'^'  shift 40
	EQ  reduce 29
	NEQ  reduce 29
	GT  reduce 29
	LT  reduce 29
	GE  reduce 29
	LE  reduce 29
	','  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	'/'  reduce 29
	'%'  reduce 29
	'*'  reduce 29
	')'  reduce 29
	'\n'  reduce 29
	';'  reduce 29


state 66
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr '*' expr .  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	'^'  shift 40
	EQ  reduce 27
	NEQ  reduce 27
	GT  reduce 27
	LT  reduce 27
	GE  reduce 27
	LE  reduce 27
	','  reduce 27
	'-'  reduce 27
	'+'  reduce 27
	'/'  reduce 27
	'%'  reduce 27
	'*'  reduce 27
	')'  reduce 27
	'\n'  reduce 27
	';'  reduce 27


state 67
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr '^' expr .  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	.  reduce 30


state 68
	cond : '(' expr . ')'  (15)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	')'  shift 73
	.  error


state 69
	stmt : while cond stmt . end  (9)
	end : .  (19)

	.  reduce 19

	end  goto 74


state 70
	stmt : if cond stmt . end  (10)
	stmt : if cond stmt . end else stmt end  (11)
	end : .  (19)

	.  reduce 19

	end  goto 75


state 71
	expr : BLTIN '(' expr ',' . expr ')'  (23)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	'('  shift 8
	'['  shift 9
	.  error

	asgn  goto 20
	expr  goto 76
	poly  goto 17


state 72
	expr : BLTIN '(' expr ')' .  (24)

	.  reduce 24


state 73
	cond : '(' expr ')' .  (15)

	.  reduce 15


state 74
	stmt : while cond stmt end .  (9)

	.  reduce 9


75: shift/reduce conflict (shift 77, reduce 10) on ELSE
state 75
	stmt : if cond stmt end .  (10)
	stmt : if cond stmt end . else stmt end  (11)

	ELSE  shift 77
	BLTIN  reduce 10
	VAR  reduce 10
	NUM  reduce 10
	IF  reduce 10
	WHILE  reduce 10
	PRINT  reduce 10
	'('  reduce 10
	'['  reduce 10
	'\n'  reduce 10
	'{'  reduce 10
	'}'  reduce 10

	else  goto 78


state 76
	expr : BLTIN '(' expr ',' expr . ')'  (23)
	expr : expr . '+' expr  (25)
	expr : expr . '-' expr  (26)
	expr : expr . '*' expr  (27)
	expr : expr . '/' expr  (28)
	expr : expr . '%' expr  (29)
	expr : expr . '^' expr  (30)
	expr : expr . EQ expr  (31)
	expr : expr . NEQ expr  (32)
	expr : expr . GT expr  (33)
	expr : expr . LT expr  (34)
	expr : expr . GE expr  (35)
	expr : expr . LE expr  (36)

	EQ  shift 29
	NEQ  shift 30
	GT  shift 31
	LT  shift 32
	GE  shift 33
	LE  shift 34
	'-'  shift 35
	'+'  shift 36
	'/'  shift 37
	'%'  shift 38
	'*'  shift 39
	'^'  shift 40
	')'  shift 79
	.  error


state 77
	else : ELSE .  (18)

	.  reduce 18


state 78
	stmt : if cond stmt end else . stmt end  (11)

	BLTIN  shift 2
	VAR  shift 3
	NUM  shift 4
	IF  shift 5
	WHILE  shift 6
	PRINT  shift 7
	'('  shift 8
	'['  shift 9
	'{'  shift 11
	.  error

	asgn  goto 20
	expr  goto 54
	stmt  goto 80
	while  goto 15
	if  goto 16
	poly  goto 17


state 79
	expr : BLTIN '(' expr ',' expr ')' .  (23)

	.  reduce 23


state 80
	stmt : if cond stmt end else stmt . end  (11)
	end : .  (19)

	.  reduce 19

	end  goto 81


state 81
	stmt : if cond stmt end else stmt end .  (11)

	.  reduce 11


State 12 contains 1 shift/reduce conflict.
State 75 contains 1 shift/reduce conflict.


33 terminals, 14 nonterminals
44 grammar rules, 82 states
